--- a/configs/menu.conf
+++ b/configs/menu.conf
@@ -3,6 +3,9 @@ url_editactive = editactive.php?table=
 # list_admin
 url_list_admin = list.php?table=admin
 url_create_admin = edit.php?table=admin
+# list-server
+url_list_server = list.php?table=server
+url_create_server = edit.php?table=server
 # list-domain
 url_list_domain = list.php?table=domain
 url_edit_domain = edit.php?table=domain
